Prepared interface, value and proxy - work in progress
