# generator-api/src/main/java/com/provys/provysobject/generator/api/EntityGeneratorEndpoint.java
@@ -6,12 +6,10 @@ import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 
+import javax.annotation.Nullable;
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
-import javax.ws.rs.GET;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
+import javax.ws.rs.*;
 import javax.ws.rs.core.Response;
 
 @ApplicationScoped
@@ -22,7 +20,28 @@ public class EntityGeneratorEndpoint {
     EntityGenerator entityGenerator;
 
     @GET
-    @Path("/interface/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}")
+    @Path("/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}/geninterface")
+    @Produces("text/plain")
+    @Operation(
+            summary = "Generate GenInterface",
+            description = "Generate generated ancestor of interface for accessing objects of given type, containing " +
+                    "attribute getters",
+            responses = {
+                    @ApiResponse(
+                            description = "Class source",
+                            content = @Content(
+                                    mediaType = "text/plain",
+                                    schema = @Schema(
+                                            implementation = String.class,
+                                            maxLength = 30
+                                    )))})
+    public Response getGenInterface(@PathParam("entityNm") String entityNm,
+                                    @QueryParam("friendEntities") @Nullable String friendEntities) {
+        return Response.ok(entityGenerator.generateGenInterface(entityNm, friendEntities)).build();
+    }
+
+    @GET
+    @Path("/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}/interface")
     @Produces("text/plain")
     @Operation(
             summary = "Generate Interface",
@@ -36,7 +55,111 @@ public class EntityGeneratorEndpoint {
                                             implementation = String.class,
                                             maxLength = 30
                                     )))})
-    public Response getInterface(@PathParam("entityNm") String entityNm) {
-        return Response.ok(entityGenerator.generateInterface(entityNm)).build();
+    public Response getInterface(@PathParam("entityNm") String entityNm,
+                                    @QueryParam("friendEntities") @Nullable String friendEntities) {
+        return Response.ok(entityGenerator.generateInterface(entityNm, friendEntities)).build();
+    }
+
+    @GET
+    @Path("/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}/genproxy")
+    @Produces("text/plain")
+    @Operation(
+            summary = "Generate GenProxy",
+            description = "Generate generated proxy ancestor, implementing interface of given object in scope defined" +
+                    " by generated interface",
+            responses = {
+                    @ApiResponse(
+                            description = "Class source",
+                            content = @Content(
+                                    mediaType = "text/plain",
+                                    schema = @Schema(
+                                            implementation = String.class,
+                                            maxLength = 30
+                                    )))})
+    public Response getGenProxy(@PathParam("entityNm") String entityNm,
+                                @QueryParam("friendEntities") @Nullable String friendEntities) {
+        return Response.ok(entityGenerator.generateGenProxy(entityNm, friendEntities)).build();
+    }
+
+    @GET
+    @Path("/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}/proxy")
+    @Produces("text/plain")
+    @Operation(
+            summary = "Generate Proxy",
+            description = "Generate proxy - simple envelope on generated proxy file. Used only for initialisation," +
+                    " later not regenerated",
+            responses = {
+                    @ApiResponse(
+                            description = "Class source",
+                            content = @Content(
+                                    mediaType = "text/plain",
+                                    schema = @Schema(
+                                            implementation = String.class,
+                                            maxLength = 30
+                                    )))})
+    public Response getProxy(@PathParam("entityNm") String entityNm,
+                             @QueryParam("friendEntities") @Nullable String friendEntities) {
+        return Response.ok(entityGenerator.generateProxy(entityNm, friendEntities)).build();
+    }
+
+    @GET
+    @Path("/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}/value")
+    @Produces("text/plain")
+    @Operation(
+            summary = "Generate Value",
+            description = "Generate value class - object holding all object data",
+            responses = {
+                    @ApiResponse(
+                            description = "Class source",
+                            content = @Content(
+                                    mediaType = "text/plain",
+                                    schema = @Schema(
+                                            implementation = String.class,
+                                            maxLength = 30
+                                    )))})
+    public Response getValue(@PathParam("entityNm") String entityNm,
+                                @QueryParam("friendEntities") @Nullable String friendEntities) {
+        return Response.ok(entityGenerator.generateValue(entityNm, friendEntities)).build();
+    }
+
+    @GET
+    @Path("/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}/value")
+    @Produces("text/plain")
+    @Operation(
+            summary = "Generate Loader Interface",
+            description = "Generate loader interface - interface defining requirements for loader for given entity." +
+                    " Only used to initialize file if one doesn't exist, is not refreshed later",
+            responses = {
+                    @ApiResponse(
+                            description = "Class source",
+                            content = @Content(
+                                    mediaType = "text/plain",
+                                    schema = @Schema(
+                                            implementation = String.class,
+                                            maxLength = 30
+                                    )))})
+    public Response getLoaderInterface(@PathParam("entityNm") String entityNm,
+                                @QueryParam("friendEntities") @Nullable String friendEntities) {
+        return Response.ok(entityGenerator.generateLoaderInterface(entityNm, friendEntities)).build();
+    }
+
+    @GET
+    @Path("/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}/value")
+    @Produces("text/plain")
+    @Operation(
+            summary = "Generate Loader Base class",
+            description = "Generate loader base class - common ancestor for loaders for given entity.",
+            responses = {
+                    @ApiResponse(
+                            description = "Class source",
+                            content = @Content(
+                                    mediaType = "text/plain",
+                                    schema = @Schema(
+                                            implementation = String.class,
+                                            maxLength = 30
+                                    )))})
+    public Response getLoaderBase(@PathParam("entityNm") String entityNm,
+                                       @QueryParam("friendEntities") @Nullable String friendEntities) {
+        return Response.ok(entityGenerator.generateLoaderBase(entityNm, friendEntities)).build();
     }
 }
