# generator-impl/src/main/java/com/provys/provysobject/generator/impl/DefaultEntityGenerator.java
@@ -1,12 +1,15 @@
 package com.provys.provysobject.generator.impl;
 
-import com.provys.catalogue.api.AttrType;
-import com.provys.catalogue.api.CatalogueRepository;
+import com.provys.catalogue.api.*;
 import com.provys.provysobject.generator.EntityGenerator;
 
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
@@ -22,41 +25,73 @@ public class DefaultEntityGenerator implements EntityGenerator {
         this.catalogueRepository = Objects.requireNonNull(catalogueRepository);
     }
 
-    private static String toInitCap(String name) {
-        return Character.toUpperCase(name.charAt(0)) + name.substring(1);
+    private List<String> parseFriendEntities(@Nullable String friendEntities) {
+        if (friendEntities == null) {
+            return Collections.emptyList();
+        }
+        return Arrays.stream(friendEntities.split(",")).map(String::strip).collect(Collectors.toList());
     }
 
+    @Nonnull
     @Override
-    public String generateInterface(String entityNm) {
-        var entity = catalogueRepository.getEntityManager().getByNameNm(entityNm);
-        var entityName = Character.toUpperCase(entityNm.charAt(0)) + entityNm.substring(1).toLowerCase();
-        var attrs = entity.getAttrs().stream()
-                .filter(attr -> (attr.getAttrType() == AttrType.COLUMN))
-                .sorted()
-                .collect(Collectors.toList());
-        var builder = new StringBuilder()
-                .append("public interface Gen")
-                .append(entityName)
-                .append(" extends ProvysObject {\n");
-        for (var attr : attrs) {
-            builder.append('\n')
-                    .append("    /**\n")
-                    .append("     * @return ").append(attr.getName()).append(" (attribute ").append(attr.getNameNm())
-                    .append(")\n")
-                    .append("     */\n");
-            if (attr.getMandatory()) {
-                builder.append("    @Nonnull\n");
-            }
-            builder.append("    ");
-            if (attr.getMandatory()) {
-                builder.append(attr.getDomain().getImplementingClass(true).getSimpleName());
-            } else {
-                builder.append("Optional<").append(attr.getDomain().getImplementingClass(false).getSimpleName())
-                        .append(">");
-            }
-            builder.append(" get").append(toInitCap(attr.getJavaName())).append("();\n");
-        }
-        builder.append('}');
-        return builder.toString();
+    public String generateGenInterface(String entityNm, @Nullable String friendEntities) {
+        var entity = new GeneratorEntity(catalogueRepository,
+                catalogueRepository.getEntityManager().getByNameNm(entityNm), "Catalogue",
+                parseFriendEntities(friendEntities));
+        return entity.generateGenInterface().toString();
+    }
+
+    @Nonnull
+    @Override
+    public String generateInterface(String entityNm, @Nullable String friendEntities) {
+        var entity = new GeneratorEntity(catalogueRepository,
+                catalogueRepository.getEntityManager().getByNameNm(entityNm), "Catalogue",
+                parseFriendEntities(friendEntities));
+        return entity.generateInterface().toString();
+    }
+
+    @Nonnull
+    @Override
+    public String generateGenProxy(String entityNm, @Nullable String friendEntities) {
+        var entity = new GeneratorEntity(catalogueRepository,
+                catalogueRepository.getEntityManager().getByNameNm(entityNm), "Catalogue",
+                parseFriendEntities(friendEntities));
+        return entity.generateGenProxy().toString();
+    }
+
+    @Nonnull
+    @Override
+    public String generateProxy(String entityNm, @Nullable String friendEntities) {
+        var entity = new GeneratorEntity(catalogueRepository,
+                catalogueRepository.getEntityManager().getByNameNm(entityNm), "Catalogue",
+                parseFriendEntities(friendEntities));
+        return entity.generateProxy().toString();
+    }
+
+    @Nonnull
+    @Override
+    public String generateValue(String entityNm, @Nullable String friendEntities) {
+        var entity = new GeneratorEntity(catalogueRepository,
+                catalogueRepository.getEntityManager().getByNameNm(entityNm), "Catalogue",
+                parseFriendEntities(friendEntities));
+        return entity.generateValue().toString();
+    }
+
+    @Nonnull
+    @Override
+    public String generateLoaderInterface(String entityNm, @Nullable String friendEntities) {
+        var entity = new GeneratorEntity(catalogueRepository,
+                catalogueRepository.getEntityManager().getByNameNm(entityNm), "Catalogue",
+                parseFriendEntities(friendEntities));
+        return entity.generateLoaderInterface().toString();
+    }
+
+    @Nonnull
+    @Override
+    public String generateLoaderBase(String entityNm, @Nullable String friendEntities) {
+        var entity = new GeneratorEntity(catalogueRepository,
+                catalogueRepository.getEntityManager().getByNameNm(entityNm), "Catalogue",
+                parseFriendEntities(friendEntities));
+        return entity.generateLoaderBase().toString();
     }
 }
